# gpcplot

./: .gitignore  Jupyter Quick-Inspect (single cell).ipynb  README.md  TODO.md  pyproject.toml
.ipynb_checkpoints/: Jupyter Quick-Inspect (single cell)-checkpoint.ipynb
src/gpcplot/: __init__.py  cli.py  core.py  pipeline.py
src/gpcplot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/gpcplot/_styles/: gpcplot.mplstyle
src/gpcplot/arc/: io.py  metrics.py  plot.py  preprocess.py
tests/: test_cli_end_to_end.py  test_core_helpers.py  test_metrics.py  test_plot_defaults.py
tests/data/: cycMo(oct)-2.txt  cycMo(oct)-2_Zn.txt  cycMo(oct)-2•active.txt
