[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpcplot"
version = "0.6.1"
description = "GPC overlay plotting and metrics (log10M default) with journal-ready styles"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Your Name" }]
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.21",
  "matplotlib>=3.6",
  "cycler>=0.11",
  "importlib-resources; python_version<'3.9'",
]

[project.scripts]
gpcplot = "gpcplot.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gpcplot = ["_styles/gpcplot.mplstyle", "py.typed"]

# Optional developer tools (use if you add them)
[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E","F","I","UP","B","SIM"]
ignore = ["E501"]
